test/corpus/conjlist.txt
=============|||
Basic Conjlist
=============|||

op ==
    /\ 1
    /\ 2

-------------|||

(unit
  (identifier)
  (conj_list
    (number)
    (number)
  )
)

=============|||
Inline Conjlist
=============|||

op == /\ 1
      /\ 2

-------------|||

(unit
  (identifier)
  (conj_list
    (number)
    (number)
  )
)

=============|||
Left-Shifted Conjlist
=============|||

op ==
 /\ 1
/\ 2

-------------|||

(unit
  (identifier)
  (infix_op
    (conj_list (number))
    (land)
    (number)
  )
)

=============|||
Right-Shifted Conjlist
=============|||

op ==
/\ 1
 /\ 2

-------------|||

(unit
  (identifier)
  (conj_list
    (infix_op
      (number)
      (land)
      (number)
    )
  )
)

=============|||
Separated Conjlist
=============|||

op ==
  /\ 1

  /\ 2

-------------|||

(unit
  (identifier)
  (conj_list
    (number)
    (number)
  )
)

=============|||
Multiline Conjlist
=============|||

op ==
  /\ 
   1
  /\
   2

-------------|||

(unit
  (identifier)
  (conj_list
    (number)
    (number)
  )
)

=============|||
Nested Conjlist
=============|||

op ==
 /\ /\ 1
    /\ 2
 /\ 3

-------------|||

(unit
  (identifier)
  (conj_list
    (conj_list
      (number)
      (number)
    )
    (number)
  )
)
